--- a/app/views/home/_portfolio.html.erb
+++ b/app/views/home/_portfolio.html.erb
@@ -1,5 +1,22 @@
 <section id="portfolio">
   <div class="container">
-
+    <h2 class="cards-title text-center mb-4">PORTFOLIO</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
+      <div class="col">
+        <%= render("home/62_halkingcroft") %>
+      </div>
+      <div class="col">
+        <%= render("home/44_Halkingcroft") %>
+      </div>
+      <div class="col">
+        <%= render("home/572_hanworth") %>
+      </div>
+      <div class="col">
+        <%= render("home/360_Reading_Road") %>
+      </div>
+      <div class="col">
+        <%= render("home/38_Burroway") %>
+      </div>
+    </div>
   </div>
 </section>
