--- a/app/views/home/_about_us.html.erb
+++ b/app/views/home/_about_us.html.erb
@@ -4,9 +4,9 @@
     <div class="row row-cols-1 row-cols-md-4 g-4 mt-3">
       <div class="col">
         <div class="card h-100">
-          <%= image_tag("vandana.png", class: "card-img-top", size: "50x250") %>
+          <%= image_tag("vandana.jpg", class: "card-img-top image", size: "50x250") %>
           <div class="card-body">
-            <h5 class="card-title">VANDANA SHARMA</h5>
+            <h5 class="card-title">VANDANA</h5>
             <p class="font-italic">Owner/ Director</p>
             <p class="card-text">Vandana has over 22 years of experience in the field of architecture and has worked with a number of architectural firms in India and UK.
               During her career she has worked on a broad range of projects, from large scale luxury housing to renewable energy plants and
@@ -19,7 +19,7 @@
         <div class="card h-100">
           <%= image_tag("kanika.png", class: "card-img-top", size: "50x250") %>
           <div class="card-body">
-            <h5 class="card-title">KANIKA SHARMA</h5>
+            <h5 class="card-title">KANIKA</h5>
             <p class="font-italic">Architectural Technician</p>
             <p class="card-text">Kanika is proficient at analysing and designing spaces. She has expertise in 3D modelling and uses Revit, AutoCAD and Photoshop to develop concepts, working drawings and presentations. Her keen interest in landscape architecture is reflected through her portfolio.</p>
           </div>
@@ -27,9 +27,9 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <%= image_tag("shourya.jpg", class: "card-img-top", size: "50x250") %>
+          <%= image_tag("shourya.jpg", class: "card-img-top image", size: "50x250") %>
           <div class="card-body">
-            <h5 class="card-title">SHOURYA SHARMA</h5>
+            <h5 class="card-title">SHOURYA</h5>
             <p class="font-italic">IT & Web Manager</p>
             <p class="card-text">Shourya is a computer science undergraduate with excellent communication skills and administrative qualities. He is proficient at initiating, co-ordinating and enforcing systems and procedures. His current role involves the management of all online content presented by the company. This involves the upkeep of this website, as well as the email and corresponding contact systems for clients.</p>
           </div>
@@ -37,9 +37,9 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <%= image_tag("pragya.png", class: "card-img-top", size: "50x250") %>
+          <%= image_tag("pragya.png", class: "card-img-top image", size: "50x250") %>
           <div class="card-body">
-            <h5 class="card-title">PRAGYA SHARMA</h5>
+            <h5 class="card-title">PRAGYA</h5>
             <p class="font-italic">Architectural Assistant</p>
             <p class="card-text">Pragya has worked on a number of commercial projects on different stages and scales. She brings with her great graphical experience in high-end architectural design and final presentation using packages like Google Sketch UP, Adobe Illustrator, VRay and AutoCAD.</p>
           </div>
