--- a/app/views/home/_services.html.erb
+++ b/app/views/home/_services.html.erb
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="text-center mt-3">
-      <button type="button" class="btn btn-primary">Portfolio</button>
+      <a href="#contact" class="btn btn-primary">View All Services</a>
     </div>
   </div>
 </section>
