--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,5 +14,8 @@
   <%= render('layouts/header') %>
 </header>
   <%= yield %>
+<div class="loader-wrapper">
+  <span class="loader"><span class="loader-inner"></span></span>
+</div>
 </body>
 </html>
