--- a/app/views/home/_572_hanworth.html.erb
+++ b/app/views/home/_572_hanworth.html.erb
@@ -1,7 +1,7 @@
 <div class="card h-100" data-toggle="modal" data-target="#exampleModal2">
   <%= image_tag("572 Hanworth Road/frontView2ndFloor.jpg", class: "card-img-top image") %>
   <div class="card-body">
-    <h5 class="card-title">572 Hanworth Road, Hounslow (Under Development)</h5>
+    <h5 class="card-title">572 Hanworth Road, Richmond (Under Development)</h5>
     <p class="card-text">Double storey side and rear extension with porch.</p>
   </div>
 </div>
