--- a/app/views/home/_contact-us.html.erb
+++ b/app/views/home/_contact-us.html.erb
@@ -1,9 +1,8 @@
 <section id="contact">
-  <%= image_tag("wave(4).svg", class: "footer-image") %>
 <div class="container">
   <div class="row">
     <div class="col-md">
-      <h2 class="text-center">Services</h2>
+      <h2 class="text-center mt-5">Services</h2>
       <p>VS Design Solutions is a studio that offers consultancy for architectural design and services.
         Spanning across different fields and scales of design, the practice works on residential and commercial projects.
         Our studio has worked with highly experienced professionals and encourages talented young professionals
