--- a/app/views/home/_landing_page.html.erb
+++ b/app/views/home/_landing_page.html.erb
@@ -1,15 +1,11 @@
 <section id=banner>
 <div class="container">
 <div class="row">
-  <div class="col-md-5">
-    <p class="promo-title">THE RIGHT ARCHITECTURE FIRM FOR YOU</p>
+  <div class="col-md">
+    <p class="promo-title">ARCHITECTURE AND DESIGN STUDIOS</p>
     <p class="promo-intro">At VS Design Solutions, we pride ourselves on being your local architecture firm, meaning that we will always be honest,
-      and upfront with you for all types of business.</p>
-  </div>
-  <div class="col-md-7 text-center">
-    <%= image_tag("Corporate_Woman_Working_at_her_Desk.svg", class: "img-fluid") %>
+      and upfront with you for all types of business. Headquartered in Slough, we have worked with Planning Departments of several local authorities and </p>
   </div>
 </div>
 </div>
-<%=image_tag("wave(1).svg", class: "image-bottom") %>
 </section>
