--- a/app/views/home/_portfolio.html.erb
+++ b/app/views/home/_portfolio.html.erb
@@ -1,21 +1,21 @@
 <section id="portfolio">
   <div class="container">
     <h2 class="cards-title text-center mb-4">PORTFOLIO</h2>
-    <div class="row row-cols-1 row-cols-md-3 g-4 mt-3">
-      <div class="col">
+    <div class="row row-cols-1 row-cols-md-3 g-3 mt-3">
+      <div class="col mt-4">
         <%= render("home/62_halkingcroft") %>
       </div>
-      <div class="col">
-        <%= render("home/44_Halkingcroft") %>
+      <div class="col mt-4">
+        <%= render("home/38_Burroway") %>
       </div>
-      <div class="col">
+      <div class="col mt-4">
         <%= render("home/572_hanworth") %>
       </div>
-      <div class="col">
+      <div class="col mt-4">
         <%= render("home/360_Reading_Road") %>
       </div>
-      <div class="col">
-        <%= render("home/38_Burroway") %>
+      <div class="col mt-4">
+        <%= render("home/44_Halkingcroft") %>
       </div>
     </div>
   </div>
