--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark ">
   <div class="container-fluid">
-    <%= link_to "VS DESIGN SOLUTIONS", "#", class: "navbar-brand"%>
+    <%= link_to "VS DESIGN SOLUTIONS LTD", "#", class: "navbar-brand"%>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-list" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path class="path" fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"/>
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="#">HOME</a>
+          <a class="nav-link" aria-current="page" href="#">ABOUT US</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#services">SERVICES</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#about-us">ABOUT US</a>
+          <a class="nav-link" href="#about-us">THE TEAM</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#portfolio">PORTFOLIO</a>
@@ -25,5 +25,6 @@
         </li>
       </ul>
     </div>
+    <%= image_tag("logo.png", class: "img-fluid flot-right logo", size: "52x50") %>
   </div>
 </nav>
