landing page corrected to suit example website

--- a/app/views/home/_contact-us.html.erb
+++ b/app/views/home/_contact-us.html.erb
@@ -2,18 +2,36 @@
 <div class="container">
   <div class="row">
     <div class="col-md">
-      <h2 class="text-center mt-5">Services</h2>
+      <h2 class="text-center mt-5 service-title">Services</h2>
       <p>VS Design Solutions is a studio that offers consultancy for architectural design and services.
         Spanning across different fields and scales of design, the practice works on residential and commercial projects.
         Our studio has worked with highly experienced professionals and encourages talented young professionals
         from various sectors in the field of built environment.</p>
-      <p>We provide architectural services including Concept Design, Building Design, Details, Construction Drawings, Custom Homes, Drafting, Floor Plans, Home Extensions, Home Remodelling, House Plans, New Home Construction, Space Planning, Planning Permissions, Housing Regulation and Sustainable design.
-      The Studio works with a number of external associate consultants to provide professional services which include technical solutions and CAD/BIM services. In addition, it also has associate offices in Delhi.</p>
+      <p>We provide architectural services on a wide range of projects:</p>
+      <ul class="list-head">
+        <li>Initial Surveys	</li>
+        <li>3D modelling</li>
+        <li>Site Visits</li>
+        <li>Site-Management</li>
+        <li>Pre-planning apps</li>
+        <li>Tree/ bat surveys</li>
+        <li>AutoCAD drafting of designs</li>
+        <li>Listed building consent</li>
+        <li>Lawful development certificates</li>
+        <li>Building Control Submissions</li>
+        <li>Development Feasibility studies</li>
+        <li>Thames water applications</li>
+        <li>Planning Application</li>
+        <li>Prior Approval notifications</li>
+        <li>Project viability assessment</li>
+        <li>Design & Access Statement</li>
+        <li>Flood Risk Assessment</li>
+        <li>Project Management</li>
+      </ul>
+      <p class="text-muted custom">We have developed close working relationships with both structural engineering and building control companies, both with over 25 years’ experience. We can therefore provide a complete service to include all elements of design to streamline the design and construction process.</p>
     </div>
   </div>
-  <div class="text-center">
-  </div>
-  <div class="row">
+  <div class="row mt-5">
     <div class="col-md-5">
       <%= render("contact_form") %>
     </div>
