--- a/app/views/home/_landing_page.html.erb
+++ b/app/views/home/_landing_page.html.erb
@@ -1,11 +1,82 @@
 <section id=banner>
 <div class="container">
-<div class="row">
-  <div class="col-md">
-    <p class="promo-title">ARCHITECTURE AND DESIGN STUDIOS</p>
-    <p class="promo-intro">At VS Design Solutions, we pride ourselves on being your local architecture firm, meaning that we will always be honest,
-      and upfront with you for all types of business. Headquartered in Slough, we have worked with Planning Departments of several local authorities and </p>
+  <div class="row">
+    <div class="col-md text-center">
+      <p class="promo-title text-uppercase text-center">Architecture & Design Studio</p>
+      <p class="promo-subtitle">Architectural Consulting & Design Services who give you the privilege. You Dream, We Design.</p>
+      <p class="promo-intro">At VS Design solutions, we pride ourselves on being your local architecture design studio.
+        Based in Slough, we cover a 100 miles radius and are willing to work anywhere in this distance. We work with you to materialise your
+        thoughts & guide you through the process to bring your dream to realisation.
+        We provide competitive, professional & high-quality services and currently hold a 100% success rate for planning application on a wide range of projects:
+      <br>
+      </p>
+      <ul class="list-head">
+        <li>House Extensions</li>
+        <li>Loft Conversion</li>
+        <li>New Build Homes</li>
+        <li>Green Build Homes</li>
+        <li>Conversions</li>
+        <li>Apartments</li>
+        <li>Listed Buildings</li>
+        <li>Internal Remodelling</li>
+        <li>Basements</li>
+        <li>Garages</li>
+        <li>Garden outbuildings</li>
+        <li>Barns</li>
+      </ul>
+    </div>
   </div>
-</div>
+  <div class="row">
+    <div class="col-md">
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner carousel-border">
+          <div class="carousel-item active">
+            <%= image_tag("23 Gilmore Close/rear-view-with-pagoda.jpg", class: "image d-block w-100 carousel-image") %>
+            <div class="middle d-none d-md-block">
+              <div class="text">
+                <h5>23 Gilmore Close, Langley</h5>
+                <p>Single storey side & rear extension with internal remodelling & interior fit out.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("44 Halkingcroft/FrontViewCamera.jpg", class: "image d-block w-100 carousel-image") %>
+            <div class="middle d-none d-md-block">
+              <div class="text">
+                <h5>44 Halkingcroft, Slough</h5>
+                <p>Single storey rear extension, double storey side extension along with porch and rear dormer and front velux window.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("360 Reading/front view.jpg", class: "image d-block w-100 carousel-image") %>
+            <div class="middle d-none d-md-block">
+              <div class="text">
+                <h5>360 Reading Road, Winnersh</h5>
+                <p>Double storey side extension with front & rear dormers following the demolition of existing garage.</p>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <%= image_tag("38 Burroway/front view.jpg", class: "image d-block w-100 carousel-image") %>
+            <div class="middle d-none d-md-block">
+              <div class="text">
+              <h5>38 Burroway Road, Langley</h5>
+              <p>Construction of double storey side & rear extension along with front porch & outbuilding.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
 </section>
