--- a/app/views/home/_portfolio.html.erb
+++ b/app/views/home/_portfolio.html.erb
@@ -17,6 +17,9 @@
       <div class="col mt-4">
         <%= render("home/44_Halkingcroft") %>
       </div>
+      <div class="col mt-4">
+        <%= render("home/23_Gilmore_Close") %>
+      </div>
     </div>
   </div>
 </section>
