web design changes

--- a/app/views/home/_about_us.html.erb
+++ b/app/views/home/_about_us.html.erb
@@ -37,7 +37,7 @@
       </div>
       <div class="col">
         <div class="card h-100">
-          <%= image_tag("pragya.png", class: "card-img-top image", size: "50x250") %>
+          <%= image_tag("Pragya.jpg", class: "card-img-top image", size: "50x250") %>
           <div class="card-body">
             <h5 class="card-title">PRAGYA</h5>
             <p class="font-italic">Architectural Assistant</p>
