--- a/app/views/home/_contact-us.html.erb
+++ b/app/views/home/_contact-us.html.erb
@@ -8,8 +8,10 @@
         Spanning across different fields and scales of design, the practice works on residential and commercial projects.
         Our studio has worked with highly experienced professionals and encourages talented young professionals
         from various sectors in the field of built environment.</p>
-      <p>We provide architectural services including Concept Design, Building Design, Details, Construction Drawings, Custom Homes, Drafting, Floor Plans, Home Extensions, Home Remodelling, House Plans, New Home Construction, Space Planning, Planning Permissions, Housing Regulation and Sustainable design.
-      The Studio works with a number of external associate consultants to provide professional services which include technical solutions and CAD/BIM services. In addition, it also has associate offices in Delhi.</p>
+      <p>We provide architectural services including Concept Design, Building Design, Details, Construction Drawings, Custom Homes, Drafting,
+        Floor Plans, Home Extensions, Home Remodelling, House Plans, New Home Construction, Space Planning, Planning Permissions, Building Regulation and Sustainable design.
+      The Studio works with a number of external associate consultants to provide professional services which include technical solutions and
+        CAD/BIM services. In addition, it also has associate offices in Delhi.</p>
     </div>
   </div>
   <div class="text-center">
