--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,5 +25,6 @@
         </li>
       </ul>
     </div>
+    <%= image_tag("logo.png", class: "img-fluid float-md-right logo", size: "50x50") %>
   </div>
 </nav>
