--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,6 +47,7 @@ body {
   }
 }
 
+
 #navbar {
   position: sticky;
   top: 0;
@@ -55,6 +56,7 @@ body {
     color: #fff !important;
   }
 }
+
 
 .navbar {
   background-image:  linear-gradient(to right, rgba(0, 0, 0, 0.96), #000000);
@@ -99,7 +101,7 @@ body {
   font-size: 3rem;
   font-weight: 500;
   margin-top: 2rem;
-  max-width: 25ch;
+  max-width: 15ch;
 }
 
 .promo-intro {
@@ -277,12 +279,18 @@ body {
   #portfolio {
     padding-top: 5rem;
   }
+  .logo {
+    display: none;
+  }
 }
 
 @media only screen and (max-width: 900px) {
   #portfolio {
     padding-top: 0.5rem;
     padding-bottom: 4rem;
+  }
+  .logo {
+    display: none;
   }
 
   #services {
