--- a/app/views/home/_landing_page.html.erb
+++ b/app/views/home/_landing_page.html.erb
@@ -1,13 +1,10 @@
 <section id=banner>
 <div class="container">
 <div class="row">
-  <div class="col-md-5">
+  <div class="col">
     <p class="promo-title">THE RIGHT ARCHITECTURE FIRM FOR YOU</p>
-    <p class="promo-intro">At VS Design Solutions, we pride ourselves on being your local architecture firm, meaning that we will always be honest,
+    <p class="promo-intro">At VS Design Solutions Limited, we pride ourselves on being your local architecture firm (headquartered in Slough), meaning that we will always be honest,
       and upfront with you for all types of business.</p>
-  </div>
-  <div class="col-md-7 text-center">
-    <%= image_tag("Corporate_Woman_Working_at_her_Desk.svg", class: "img-fluid") %>
   </div>
 </div>
 </div>
